--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 # ignorowanie galerii zdjec 
 
-image/gallery/2018/*.*
-image/gallery/2019/*.*
+image/gallery/2018/*.jpg
+image/gallery/2018/*.png
+image/gallery/2019/*.jpg
+image/gallery/2019/*.png
